Revert "move to new eslint index.mjs"
This reverts commit 4b855d341912a1ecd6808590a8c7fdb32d1afd09.

--- a/package.json
+++ b/package.json
@@ -14,13 +14,9 @@
 		"Node"
 	],
 	"license": "GPL-3.0-only",
-	"main": "index.mjs",
+	"main": "index.js",
 	"module": "commonjs",
 	"name": "@wvhulle/eslint-config-typescript",
 	"repository": "https://github.com/wvhulle/eslint-ts",
-	"version": "0.0.5",
-	"devDependencies": {
-		"@eslint/eslintrc": "^3.1.0",
-		"@eslint/js": "^9.5.0"
-	}
+	"version": "0.0.4"
 }
